--- a/style.css
+++ b/style.css
@@ -22,3 +22,46 @@ canvas {
   flex-direction: column;
   align-items: center;
 }
+#board-container {
+  position: relative;
+  display: inline-block;
+}
+
+#sticky-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.sticky {
+  position: absolute;
+  width: 150px;
+  height: 150px;
+  background: yellow;
+  border: 1px solid #000;
+  padding: 0.5em;
+  font-family: sans-serif;
+  cursor: move;
+  overflow-wrap: break-word;
+}
+
+#chat {
+  margin-top: 1rem;
+  width: 400px;
+  height: 200px;
+  border: 2px solid #000;
+  overflow-y: auto;
+  background: #fff;
+}
+
+#chat-messages {
+  padding: 0.5em;
+}
+
+#chat-input {
+  width: 100%;
+  padding: 0.5em;
+  box-sizing: border-box;
+}
